fix homepage display problem on firefox

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,5 +1,9 @@
 .homepage {
 	overflow: auto;
+	width: 100vw;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
   
   .theme {
 		position: fixed;
@@ -54,44 +58,44 @@
 
 }
 
-// @media (max-width: 540px) {
-//   .homepage {
+@media (max-width: 540px) {
+  .homepage {
 		
-// 		.contents {
-// 			writing-mode: horizontal-tb;
-// 			-webkit-writing-mode: horizontal-tb;
-//       -ms-writing-mode: horizontal-tb;
-// 			margin: 0;
-// 			padding: 0;
-// 			height: 100vh;
+		.contents {
+			writing-mode: horizontal-tb;
+			-webkit-writing-mode: horizontal-tb;
+      -ms-writing-mode: horizontal-tb;
+			margin: 0;
+			padding: 0;
+			height: 100vh;
 			
-// 			.title {
-// 				display: block;
-// 				text-align: center;
+			.title {
+				display: block;
+				text-align: center;
 	
-// 				h1 {
-// 					font-size: 2.5rem;
-// 				}
+				h1 {
+					font-size: 2.5rem;
+				}
 	
-// 				.bloglink {
-// 					font-size: 1.8rem;
-// 					padding: 0;
-// 				}
-// 			}
+				.bloglink {
+					font-size: 1.8rem;
+					padding: 0;
+				}
+			}
 	
-// 			.article {
+			.article {
 	
-// 				div {
-// 					font-size: 1.96rem;
-// 					padding: 0 10px;
-// 				}
+				div {
+					font-size: 1.96rem;
+					padding: 0 10px;
+				}
 	
-// 				p {
-// 					font-size: 1.8rem;
-// 					padding: 0;
-// 				}
-// 			}
-// 		}
+				p {
+					font-size: 1.8rem;
+					padding: 0;
+				}
+			}
+		}
 	
-// 	}
-// }
+	}
+}
